platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/any_expr_valid.platter
start() {
    j = (x + 12.32 > 32.2);
}