platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_116.platter
start() {
  repeat(true) {
    x = x + 1;
    pass(up) { stop; }
  }
}
